# hello-fast

./: .gitignore  Dockerfile  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/models/: __init__.py  store.py  user.py
app/db/schemas/: store.py
app/schemas/: users.py
app/serivces/: __init__.py  base.py  stores.py  users.py
migrations/: env.py
migrations/versions/: 0f98f0cac75a_init.py  4d2a11fd300f_add_custom_fields_to_user.py  830e3a97a76f_backpoulate_city.py  948195db1671_add_birthdate_field_to_user_model.py
