[tool.poetry]
name = "hello-fast"
version = "0.1.0"
description = ""
authors = ["el hassane gargem <elhassanegargem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
